# cookiecutter-fullstack

./: cookiecutter.json
{{cookiecutter.projectname}}/: .eslintrc.js  .gitignore  .pre-commit-config.yaml  package.json  pyproject.toml
{{cookiecutter.projectname}}/public/: index.html  manifest.json
{{cookiecutter.projectname}}/src/: App.jsx
